packages/rocket/rocket-0.5.0-rc.2/core/codegen/tests/ui-fail-nightly/uri_display.stderr
error: fieldless structs are not supported
 --> tests/ui-fail-nightly/uri_display.rs:4:1
  |
4 | struct Foo1;
  | ^^^^^^^^^^^^
  |
note: error occurred while deriving `UriDisplay`
 --> tests/ui-fail-nightly/uri_display.rs:3:10
  |
3 | #[derive(UriDisplayQuery)]
  |          ^^^^^^^^^^^^^^^
  = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error: fieldless structs are not supported
 --> tests/ui-fail-nightly/uri_display.rs:7:1
  |
7 | struct Foo2();
  | ^^^^^^^^^^^^^^
  |
note: error occurred while deriving `UriDisplay`
 --> tests/ui-fail-nightly/uri_display.rs:6:10
  |
6 | #[derive(UriDisplayQuery)]
  |          ^^^^^^^^^^^^^^^
  = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error: empty enums are not supported
  --> tests/ui-fail-nightly/uri_display.rs:10:11
   |
10 | enum Foo3 { }
   |           ^^^
   |
note: error occurred while deriving `UriDisplay`
  --> tests/ui-fail-nightly/uri_display.rs:9:10
   |
9  | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error: tuple structs or variants must have exactly one field
  --> tests/ui-fail-nightly/uri_display.rs:18:12
   |
18 | struct Foo5(String, String);
   |            ^^^^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> tests/ui-fail-nightly/uri_display.rs:17:10
   |
17 | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected list `#[attr(..)]`, found bare integer literal
  --> tests/ui-fail-nightly/uri_display.rs:22:20
   |
22 |     #[field(name = 123)]
   |                    ^^^
   |
note: error occurred while deriving `UriDisplay`
  --> tests/ui-fail-nightly/uri_display.rs:20:10
   |
20 | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct must have exactly one field
  --> tests/ui-fail-nightly/uri_display.rs:27:12
   |
27 | struct Foo7(String, usize);
   |            ^^^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> tests/ui-fail-nightly/uri_display.rs:26:10
   |
26 | #[derive(UriDisplayPath)]
   |          ^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `UriDisplayPath` (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct must have exactly one field
  --> tests/ui-fail-nightly/uri_display.rs:30:1
   |
30 | struct Foo8;
   | ^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> tests/ui-fail-nightly/uri_display.rs:29:10
   |
29 | #[derive(UriDisplayPath)]
   |          ^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `UriDisplayPath` (in Nightly builds, run with -Z macro-backtrace for more info)

error: enums are not supported
  --> tests/ui-fail-nightly/uri_display.rs:33:1
   |
33 | enum Foo9 {  }
   | ^^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> tests/ui-fail-nightly/uri_display.rs:32:10
   |
32 | #[derive(UriDisplayPath)]
   |          ^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `UriDisplayPath` (in Nightly builds, run with -Z macro-backtrace for more info)

error: named structs are not supported
  --> tests/ui-fail-nightly/uri_display.rs:36:1
   |
36 | / struct Foo10 {
37 | |     named: usize
38 | | }
   | |_^
   |
note: error occurred while deriving `UriDisplay`
  --> tests/ui-fail-nightly/uri_display.rs:35:10
   |
35 | #[derive(UriDisplayPath)]
   |          ^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `UriDisplayPath` (in Nightly builds, run with -Z macro-backtrace for more info)
